--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -22,8 +22,9 @@
 
 	{block scripts}
 	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-	<script src="//nette.github.io/resources/js/netteForms.min.js"></script>
+	{*<script src="//nette.github.io/resources/js/netteForms.min.js"></script>*}
 	<script src="{$basePath}/js/main.js"></script>
+	<script src="{$basePath}/js/live-form-validation.js"></script>
 	{/block}
 </body>
 </html>
