--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -113,7 +113,7 @@ $include-html-global-classes: $include-html-classes;
 // $steel       : #666666;
 // $charcoal    : #555555;
 // $tuatara     : #444444;
-// $oil         : #333333;
+$oil         : #333333;
 // $jet         : #222222;
 // $black       : #000000;
 $dark-grey      : #4D4D4D;
