--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -117,6 +117,7 @@ $oil         : #333333;
 // $jet         : #222222;
 // $black       : #000000;
 $dark-grey      : #4D4D4D;
+$grey           : #ECECEC;
 
 // We use these as default colors throughout
 // $primary-color: #008CBA;
