--- a/www/css/app.css
+++ b/www/css/app.css
@@ -9157,31 +9157,66 @@ th.hide-for-touch {
     display: table-cell !important;
   }
 }
-/* line 9, ../../scss/app.scss */
+/* line 6, ../../scss/app.scss */
+body {
+  background-color: whitesmoke;
+}
+
+/* line 11, ../../scss/app.scss */
+#menu .top-bar-section ul li {
+  background: #4D4D4D;
+}
+/* line 17, ../../scss/app.scss */
 #menu ul.vertical-center li {
   color: white;
 }
-/* line 12, ../../scss/app.scss */
-#menu ul.vertical-center li :hover {
-  background-color: #333333;
+/* line 21, ../../scss/app.scss */
+#menu ul.vertical-center :hover li {
+  background: #333333;
 }
-/* line 17, ../../scss/app.scss */
+/* line 25, ../../scss/app.scss */
 #menu ul.vertical-center ul#profile-info {
   padding-top: 5px;
   padding-left: 5px;
 }
-/* line 21, ../../scss/app.scss */
+/* line 29, ../../scss/app.scss */
 #menu ul.vertical-center ul#profile-info li:nth-child(3) {
   font-size: 11px;
   color: grey;
 }
 
-/* line 30, ../../scss/app.scss */
+/* line 39, ../../scss/app.scss */
+#chat {
+  background-color: #ECECEC;
+  height: calc(100vh - 55px);
+}
+
+/* line 44, ../../scss/app.scss */
+.breadcrumbs {
+  border-radius: 0;
+  border: none;
+  border-bottom: 2px solid #ECECEC;
+}
+
+/* line 50, ../../scss/app.scss */
+.without-padding {
+  padding: 0;
+}
+
+/* line 54, ../../scss/app.scss */
+.full-width {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial;
+}
+
+/* line 61, ../../scss/app.scss */
 ul.unstyled {
   list-style-type: none;
 }
 
-/* line 34, ../../scss/app.scss */
+/* line 65, ../../scss/app.scss */
 .img-circle {
   -webkit-border-radius: 150px;
   -moz-border-radius: 150px;
