login without chat fix

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -65,9 +65,12 @@
 
 
 	<div class="small-2 column without-padding">
+		<div n:if="$presenter->name != Login" class="fixed">
+
 			{block chat}
 				{control chat}
 			{/block}
+		</div>
 	</div>
 </div>
 
