login without chat fix

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -65,7 +65,7 @@
 
 
 	<div class="small-2 column without-padding">
-		<div n:if="$presenter->name != Login" class="fixed">
+		<div n:if="$presenter->name != Login">
 
 			{block chat}
 				{control chat}
