--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -43,7 +43,7 @@
 </div>
 <div class="row full-width">
 	<div class="small-10 column without-padding">
-		<div class="hide-for-small small-12 ">
+		<div n:if="$presenter->name != Login" class="hide-for-small small-12 ">
 			{control breadcrumbs}
 		</div>
 
