creating new class

--- a/app/presenters/templates/SchoolYear/default.latte
+++ b/app/presenters/templates/SchoolYear/default.latte
@@ -1,20 +1,3 @@
 {block content}
-
-	{form schoolYearForm}
-		<p>
-			{label from/}
-			{input from}
-		</p>
-		<p>
-			{label to/}
-			{input to}
-		</p>
-		<p>
-			{label save/}
-			{input save}
-		</p>
-	{/form}
-
-
-
+	{control schoolYearForm}
 {/block}
