font-awesome fix

--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -14,7 +14,7 @@
 		<script src="{$basePath}/js/app.min.js"></script>
 	{else}
 		<!-- build:css {$basePath}/css/screen.min.css -->
-
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="{$basePath}/css/foundation-datepicker.css" />
 		<link rel="stylesheet" href="{$basePath}/css/foundation-icons/foundation-icons.css" />
 		<link rel="stylesheet" href="{$basePath}/css/app.css" />
