--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -14,9 +14,8 @@
 		<script src="{$basePath}/js/app.min.js"></script>
 	{else}
 		<!-- build:css {$basePath}/css/screen.min.css -->
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="{$basePath}/css/foundation-icons.css" />
 		<link rel="stylesheet" href="{$basePath}/css/foundation-datepicker.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css" />
 		<link rel="stylesheet" href="{$basePath}/css/app.css" />
 		<!-- endbuild -->
 
