--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -28,6 +28,7 @@
 			<script src="{$basePath}/js/angular.min.js"></script>
 			<script src="{$basePath}/js/app.js"></script>
 			<script src="{$basePath}/js/angularApp.js"></script>
+			<script src="{$basePath}/js/nette.ajax.js"></script>
 
 		<!-- endbuild -->
 	{/if}
