--- a/app/presenters/templates/Classes/default.latte
+++ b/app/presenters/templates/Classes/default.latte
@@ -40,7 +40,7 @@
 						<td>{$student->getName()} {$student->getSurname()}</td>
 						{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_GROUP}
 							<td>
-								{var $mainClass = $student->getMainClass()}
+								{var $mainClass = $student->getMainClass($actualYear)}
 								{if $mainClass}
 									{$mainClass->getName()}
 								{else}
@@ -67,14 +67,7 @@
 		{/if}
 
 
-		<div id="addStudent" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog"
-		     ng-controller="StudentsClassesController" ng-cloak
-		     ng-init="
-		        dataUrl='{link findStudents!}';
-		        class.id={$class->getId()};
-		        addStudentUrl='{link addStudentToClass!}';
-		        removeStudentUrl='{link removeStudentFromClass!}';
-		        ">
+		<div id="addStudent" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 			<h2 id="modalTitle">
 				Přidání studenta do
 				{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_CLASS}
@@ -85,55 +78,88 @@
 				{$class->getName()}
 			</h2>
 
-			<p class="lead">Vybrání z již vytvořených studentů</p>
 
-			<div class="row collapse prefix-radius">
-		        <div class="small-1 columns">
-		            <span class="prefix"><i class="fi-magnifying-glass"></i></span>
-		        </div>
-		        <div class="small-11 columns">
-					<input type="text" ng-model="query"/>
-		        </div>
-	        </div>
+			{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_GROUP}
 
-			<div class="panel" ng-show="!search || !query">Začněte vyhledávat studenty</div>
-			<div ng-show="search">
-				<div ng-show="loading"><img src="{$basePath}/images/spinner-bubble.svg" alt=""/></div>
-				<div ng-show="!loading && query">
-					<div ng-show="!students.length" class="panel">
-						<p>Nebyly nalezeni žádní studenti</p>
+				<p class="lead">Vybrání z již vytvořených studentů</p>
+
+				<div class="row collapse prefix-radius">
+					<div class="small-1 columns">
+						<span class="prefix"><i class="fi-magnifying-glass"></i></span>
 					</div>
-					<div ng-show="students.length">
-						<table class="small-12">
-							<thead>
-							<tr>
-								<th>Jméno a příjmení</th>
-								<th>Třída</th>
-								<th></th>
-							</tr>
-							</thead>
-							<tbody>
-							<tr ng-repeat="student in students">
-								<td><img ng-src="{$basePath}/images/{{ student.profilePicture }}" class="img-circle" width="30" />{{ student.name }} {{ student.surname }}</td>
-								<td><span ng-if="!student.mainClass">-</span><span ng-if="student.mainClass">{{ student.mainClass.name }}</span></td>
-								<td>
-									{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_CLASS}
-										<span class="button tiny" ng-click="addStudent(student.id)" ng-if="!student.mainClass">Přidat</span>
-										<span ng-show="student.mainClass && student.mainClass.id == class.id" class="button tiny" ng-click="removeStudent(student.id)">Odebrat</span>
-										<span ng-show="student.mainClass && student.mainClass.id != class.id" class="button tiny disabled" title="Student již navštěvuje jinou třídu">Nelze přidat</span>
-									{else}
-										<span class="button tiny" ng-if="!student.isInClass" ng-click="addStudent(student.id, this)">Přidat</span>
-										<span class="button tiny" ng-if="student.isInClass" ng-click="removeStudent(student.id)">Odebrat</span>
-									{/if}
-								</td>
-							</tr>
-							</tbody>
-						</table>
+					<div class="small-11 columns">
+						<input type="text" class="liveSearch" data-url="{link findStudents!}"/>
 					</div>
 				</div>
-			</div>
+
+				{snippet students}
+					<div class="small-12" n:snippet="studentsContainer">
+						{if !count($students)}
+							<div class="panel">Nebyli nalezeni žádní studenti</div>
+						{else}
+							<table>
+								<thead>
+								<tr>
+									<th>Jméno a příjmení</th>
+									<th>Třída</th>
+									<th></th>
+								</tr>
+								</thead>
+								{foreach $students as $student}
+									<tr n:snippet="student-$student->id">
+										<td>{$student->getName()} {$student->getSurname()}</td>
+										{var $mainClass = $student->getMainClass($actualYear)}
+
+										<td>{if $mainClass}{$mainClass->getName()}{else}-{/if}</td>
+										<td></td>
+									</tr>
+								{/foreach}
+							</table>
+						{/if}
+					</div>
+				{/snippet}
+
+			{/if}
+
+			{*<div class="panel" ng-show="!search || !query">Začněte vyhledávat studenty</div>*}
+			{*<div ng-show="search">*}
+				{*<div ng-show="loading"><img src="{$basePath}/images/spinner-bubble.svg" alt=""/></div>*}
+				{*<div ng-show="!loading && query">*}
+					{*<div ng-show="!students.length" class="panel">*}
+						{*<p>Nebyly nalezeni žádní studenti</p>*}
+					{*</div>*}
+					{*<div ng-show="students.length">*}
+						{*<table class="small-12">*}
+							{*<thead>*}
+							{*<tr>*}
+								{*<th>Jméno a příjmení</th>*}
+								{*<th>Třída</th>*}
+								{*<th></th>*}
+							{*</tr>*}
+							{*</thead>*}
+							{*<tbody>*}
+							{*<tr ng-repeat="student in students">*}
+								{*<td><img ng-src="{$basePath}/images/{{ student.profilePicture }}" class="img-circle" width="30" />{{ student.name }} {{ student.surname }}</td>*}
+								{*<td><span ng-if="!student.mainClass">-</span><span ng-if="student.mainClass">{{ student.mainClass.name }}</span></td>*}
+								{*<td>*}
+									{*{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_CLASS}*}
+										{*<span class="button tiny" ng-click="addStudent(student.id)" ng-if="!student.mainClass">Přidat</span>*}
+										{*<span ng-show="student.mainClass && student.mainClass.id == class.id" class="button tiny" ng-click="removeStudent(student.id)">Odebrat</span>*}
+										{*<span ng-show="student.mainClass && student.mainClass.id != class.id" class="button tiny disabled" title="Student již navštěvuje jinou třídu">Nelze přidat</span>*}
+									{*{else}*}
+										{*<span class="button tiny" ng-if="!student.isInClass" ng-click="addStudent(student.id, this)">Přidat</span>*}
+										{*<span class="button tiny" ng-if="student.isInClass" ng-click="removeStudent(student.id)">Odebrat</span>*}
+									{*{/if}*}
+								{*</td>*}
+							{*</tr>*}
+							{*</tbody>*}
+						{*</table>*}
+					{*</div>*}
+				{*</div>*}
+			{*</div>*}
 
 			<p class="lead">Vytvoření nového studenta</p>
+			{control studentForm}
 			<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 		</div>
 	</div>
