--- a/app/presenters/templates/Classes/default.latte
+++ b/app/presenters/templates/Classes/default.latte
@@ -22,49 +22,56 @@
 		</h2>
 		<a class="button small" href="#" data-reveal-id="addStudent">Přidat studenta</a>
 		<a class="button small" href="#">Import studentů z informačního systému Bakaláři</a>
-		{if count($class->getStudents())}
-			<table>
-				<thead>
-					<tr>
-						<th>Jméno a příjmení</th>
-						{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_GROUP}
-							<th>Třída</th>
-						{/if}
-						<th>Login</th>
-						<th>Akce</th>
-					</tr>
-				</thead>
-				<tbody>
-				{foreach $class->getStudents() as $student}
-					<tr>
-						<td>{$student->getName()} {$student->getSurname()}</td>
-						{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_GROUP}
+		{snippet studentsInClass}
+			{if count($class->getStudents())}
+				<table>
+					<thead>
+						<tr>
+							<th>Jméno a příjmení</th>
+							{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_GROUP}
+								<th>Třída</th>
+							{/if}
+							<th>Login</th>
+							<th>Akce</th>
+						</tr>
+					</thead>
+					<tbody>
+					{foreach $class->getStudents() as $student}
+						<tr>
+							<td>{$student->getName()} {$student->getSurname()}</td>
+							{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_GROUP}
+								<td>
+									{var $mainClass = $student->getMainClass($actualYear)}
+									{if $mainClass}
+										{$mainClass->getName()}
+									{else}
+										-
+									{/if}
+								</td>
+							{/if}
+							<td>{$student->getLogin()}</td>
 							<td>
-								{var $mainClass = $student->getMainClass($actualYear)}
-								{if $mainClass}
-									{$mainClass->getName()}
-								{else}
-									-
+								<a class="button secondary tiny" href="#">Editovat</a>
+								{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_GROUP}
+									<a class="button alert tiny ajax" href="{link removeStudentFromGroup! studentId => $student->getId()}">Vymazat ze skupiny</a>
 								{/if}
 							</td>
-						{/if}
-						<td>{$student->getLogin()}</td>
-						<td><a class="button secondary tiny" href="#">Editovat</a></td>
-					</tr>
-				{/foreach}
-				</tbody>
-			</table>
-		{else}
-			<p>
-				V této
-				{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_CLASS}
-					třídě
-				{else}
-					skupině
-				{/if}
-				se nenacházejí žádní studenti.
-			</p>
-		{/if}
+						</tr>
+					{/foreach}
+					</tbody>
+				</table>
+			{else}
+				<p class="panel">
+					V této
+					{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_CLASS}
+						třídě
+					{else}
+						skupině
+					{/if}
+					se nenacházejí žádní studenti.
+				</p>
+			{/if}
+		{/snippet}
 
 
 		<div id="addStudent" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
@@ -88,76 +95,50 @@
 						<span class="prefix"><i class="fi-magnifying-glass"></i></span>
 					</div>
 					<div class="small-11 columns">
-						<input type="text" class="liveSearch" data-url="{link findStudents!}"/>
+						<input type="text" class="liveSearch" data-url="{link findStudents!}" data-spinner="studentSpinner"/>
 					</div>
 				</div>
+				<img src="{$basePath}/images/spinner-bubble.svg" alt="" id="studentSpinner" class="hide"/>
 
 				{snippet students}
 					<div class="small-12" n:snippet="studentsContainer">
-						{if !count($students)}
-							<div class="panel">Nebyli nalezeni žádní studenti</div>
+						{if !isset($students)}
+							<div class="panel">Začněte vyhledávat studenty. Systém vyhledává ve všech studentech z aktuálního a loňského školního roku.</div>
 						{else}
-							<table>
-								<thead>
-								<tr>
-									<th>Jméno a příjmení</th>
-									<th>Třída</th>
-									<th></th>
-								</tr>
-								</thead>
-								{foreach $students as $student}
-									<tr n:snippet="student-$student->id">
-										<td>{$student->getName()} {$student->getSurname()}</td>
-										{var $mainClass = $student->getMainClass($actualYear)}
-
-										<td>{if $mainClass}{$mainClass->getName()}{else}-{/if}</td>
-										<td></td>
+							{if !count($students)}
+								<div class="panel">Nebyli nalezeni žádní studenti</div>
+							{else}
+								<table class="small-12">
+									<thead>
+									<tr>
+										<th>Jméno a příjmení</th>
+										<th>Třída</th>
+										<th></th>
 									</tr>
-								{/foreach}
-							</table>
+									</thead>
+									{foreach $students as $student}
+										<tr n:snippet="student-$student->id">
+											<td>{$student->getName()} {$student->getSurname()}</td>
+											{var $mainClass = $student->getMainClass($actualYear)}
+
+											<td>{if $mainClass}{$mainClass->getName()}{else}-{/if}</td>
+											<td>
+												{if $student->isInClass($class->getId())}
+													<a href="{link removeStudentFromGroup! studentId => $student->getId()}" class="ajax button tiny alert">Odebrat ze skupiny</a>
+												{else}
+													<a href="{link addStudentToGroup! studentId => $student->getId()}" class="ajax button tiny success">Přiřadit do skupiny</a>
+												{/if}
+											</td>
+										</tr>
+									{/foreach}
+								</table>
+							{/if}
 						{/if}
 					</div>
 				{/snippet}
 
 			{/if}
-
-			{*<div class="panel" ng-show="!search || !query">Začněte vyhledávat studenty</div>*}
-			{*<div ng-show="search">*}
-				{*<div ng-show="loading"><img src="{$basePath}/images/spinner-bubble.svg" alt=""/></div>*}
-				{*<div ng-show="!loading && query">*}
-					{*<div ng-show="!students.length" class="panel">*}
-						{*<p>Nebyly nalezeni žádní studenti</p>*}
-					{*</div>*}
-					{*<div ng-show="students.length">*}
-						{*<table class="small-12">*}
-							{*<thead>*}
-							{*<tr>*}
-								{*<th>Jméno a příjmení</th>*}
-								{*<th>Třída</th>*}
-								{*<th></th>*}
-							{*</tr>*}
-							{*</thead>*}
-							{*<tbody>*}
-							{*<tr ng-repeat="student in students">*}
-								{*<td><img ng-src="{$basePath}/images/{{ student.profilePicture }}" class="img-circle" width="30" />{{ student.name }} {{ student.surname }}</td>*}
-								{*<td><span ng-if="!student.mainClass">-</span><span ng-if="student.mainClass">{{ student.mainClass.name }}</span></td>*}
-								{*<td>*}
-									{*{if $class->getType() == App\Model\Entities\ClassEntity::TYPE_CLASS}*}
-										{*<span class="button tiny" ng-click="addStudent(student.id)" ng-if="!student.mainClass">Přidat</span>*}
-										{*<span ng-show="student.mainClass && student.mainClass.id == class.id" class="button tiny" ng-click="removeStudent(student.id)">Odebrat</span>*}
-										{*<span ng-show="student.mainClass && student.mainClass.id != class.id" class="button tiny disabled" title="Student již navštěvuje jinou třídu">Nelze přidat</span>*}
-									{*{else}*}
-										{*<span class="button tiny" ng-if="!student.isInClass" ng-click="addStudent(student.id, this)">Přidat</span>*}
-										{*<span class="button tiny" ng-if="student.isInClass" ng-click="removeStudent(student.id)">Odebrat</span>*}
-									{*{/if}*}
-								{*</td>*}
-							{*</tr>*}
-							{*</tbody>*}
-						{*</table>*}
-					{*</div>*}
-				{*</div>*}
-			{*</div>*}
-
+			
 			<p class="lead">Vytvoření nového studenta</p>
 			{control studentForm}
 			<a class="close-reveal-modal" aria-label="Close">&#215;</a>
